<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:inmost="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bra_bg">


    <com.xingy.lib.ui.NavigationBar
        android:layout_alignParentTop="true"
        android:id="@+id/login_nav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        inmost:leftVisiable="true"
        inmost:text="@string/login"
        inmost:drawableLeft="@drawable/pink_icon_back"
        inmost:bgColor="@color/white"
        inmost:textColor="@color/global_pink"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_nav"
        android:gravity="center_horizontal"
        android:padding="50dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/phone"
            android:padding="10dp"
            android:inputType="phone"
            android:background="@drawable/none"
            android:hint="@string/phone_num"
            android:textSize="@dimen/bar_font_30"
            android:textColor="@color/global_nav_text"
            android:textColorHint="@color/global_text_info_color"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/global_gray"/>
        <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/request_verify_code"
                android:textColor="@color/white"
                android:text="@string/send_verify_code"
                android:background="@drawable/long_pink_btn_selector"/>
            <EditText
                android:layout_toLeftOf="@id/request_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/input_verify"
                android:padding="10dp"
                android:background="@drawable/none"
                android:hint="@string/verify_code"
                android:textSize="@dimen/bar_font_30"
                android:textColor="@color/global_nav_text"
                android:textColorHint="@color/global_text_info_color"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/global_gray"/>


        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/verify_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sms_login_btn"
            android:background="@drawable/pink_btn_selector"/>


        <LinearLayout
            android:layout_marginTop="30dp"
            android:id="@+id/weixin_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@drawable/button_gray_frame_round">

        <TextView
            android:drawableLeft="@drawable/login_icon_wx"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_weixin"
            android:textStyle="bold"
            android:textColor="@color/global_pink"
            android:layout_centerHorizontal="true"/>

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_marginTop="60dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="30dp"-->
            <!--android:orientation="horizontal"-->
            <!-->-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/weixin_login"-->
                <!--android:src="@drawable/login_icon_wx"/>-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/weixin_qq"-->
                <!--android:src="@drawable/login_icon_qq"/>-->
        <!--</LinearLayout>-->

    </LinearLayout>

</RelativeLayout>