<ScrollView 
        xmlns:android="http://schemas.android.com/apk/res/android"  
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_height="match_parent">
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">  
        
   	<!-- cover -->
    	
    <!-- brief -->
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/brief_layout"
    	android:padding="10dp"
    	android:background="@color/global_gray_light">
    	<TextView 
            android:gravity="center_vertical"
    		android:layout_width="wrap_content"
    	   	android:layout_height="wrap_content"
    	    android:text="@string/event_brief"
    	    android:textColor="@color/black"
    	    android:textStyle="bold"
    	    android:layout_marginRight="10dp"/> 
    	<ImageView
    	    android:layout_centerVertical="true"
    	    android:layout_width="wrap_content"
    	   	android:layout_height="wrap_content"
    	    android:layout_alignParentRight="true"
    	    android:visibility="invisible"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        
    <EditText
        android:padding="10dp"
        android:gravity="top|left"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_brief"
        android:background="@null"
        android:scrollHorizontally="false"
        android:minLines="3"
        android:maxLines="3"
        android:layout_alignParentTop="true"
        android:textColor="@color/black"
        android:hint="@string/please_input_brief"/>
    </RelativeLayout>
    
	<View  style="@style/global_line2" />
	<!-- time address -->
	<RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
    	<TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/time_addr"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout> 
	<!-- address -->
	
	<View  style="@style/global_line2" />
	
	<!-- img -->
	<RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/event_snapshot"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout> 
    
   	<!-- join status -->
	<RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <!-- private -->
    <View  style="@style/global_line2"/>
    <RelativeLayout 
        android:id="@+id/privacy_layout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="10dp">
    	<TextView 
            android:gravity="center_vertical"
    		android:layout_width="wrap_content"
    	   	android:layout_height="wrap_content"
    	    android:text="@string/can_invited_more"
    	    android:textColor="@color/black"
    	    android:textStyle="bold"
    	    android:layout_centerVertical="true"
    	    android:layout_marginRight="10dp"/> 
    	<CheckBox
    	    android:id="@+id/privacy_btn"
    	    android:layout_centerVertical="true"
    	    android:layout_width="wrap_content"
    	   	android:layout_height="wrap_content"
    	    android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View  style="@style/global_line2"/>
    <RelativeLayout
        android:id="@+id/input_join_limit_layout"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_vertical"
    	android:padding="10dp">
    	<CheckBox
    	    android:layout_alignParentLeft="true"
    	    android:id="@+id/join_limit_btn"
    	    android:layout_centerVertical="true"
    	    android:layout_width="wrap_content"
    	   	android:layout_height="wrap_content"/>
    	<TextView
    	    android:layout_toRightOf="@id/join_limit_btn" 
    	    android:layout_centerVertical="true"
    	    android:gravity="center_vertical"
    		android:layout_width="wrap_content"
    	   	android:layout_height="wrap_content"
    	    android:text="@string/join_limit"
    	    android:textColor="@color/black"
    	    android:singleLine="true"
    	    android:textStyle="bold"/> 
    	<EditText
    	    android:layout_alignParentRight="true"
    	    android:layout_centerVertical="true"
    	    android:gravity="right"
	    	android:singleLine="true"
	    	android:layout_height="wrap_content"
        	android:layout_width="100dp"
        	android:id="@+id/input_join_limit"
        	android:background="@null"
        	android:textColor="@color/black"
        	android:inputType="none"
			android:hint="@string/join_count"/>
    	
   </RelativeLayout>
    	
    <!-- end -->
    
    
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/global_gray_light"/>
    <!-- buttons -->
    <LinearLayout 
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="0dp"
        	android:layout_height="40dp"
        	android:layout_weight="2"
        	android:gravity="center"
          	android:textStyle="bold"
          	android:textColor="@color/white"
          	android:id="@+id/event_btn1"
          	android:textSize="18dp"
        	android:background="@drawable/button_darkblue_round"
        	android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="0dp"
        	android:layout_height="40dp"
        	android:layout_weight="1"
        	android:gravity="center"
          	android:textStyle="bold"
          	android:textColor="@color/white"
          	android:id="@+id/event_btn2"
          	android:text="@string/ignore"
          	android:textSize="18dp"
        	android:background="@drawable/button_gray_round"
        	android:layout_marginLeft="10dp"/>
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/global_gray_light">
	    <TextView 
        android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/join_status"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:layout_marginRight="10dp"/>
    </RelativeLayout>
    
    
	</LinearLayout>
    </ScrollView>
 